# excelAno

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: 01_create_template.py  02_load_and_validate.py  03_compute_kappa.py
examples/sample_data/: data.csv
src/excelano/: __init__.py  annotation_data.py  anotation_data.py  schema.py  template.py
tests/: test_anotation_data.py  test_compute_kappa.py  test_schema.py  test_template.py
