[project]
name = "excelano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fuutot", email = "153519467+fuutot@users.noreply.github.com" }
]
requires-python = ">=3.12.2"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]
